# fluxo-typestate

./: CONTRIBUTING.md  Cargo.toml  LICENSE  PLANNING.md  README.md
.github/workflows/: auto-assign.yml  ci.yml  release.yml
examples/basic/: computer.rs
fluxo-typestate/: Cargo.toml
fluxo-typestate-macros/: Cargo.toml
fluxo-typestate-macros/src/: lib.rs
fluxo-typestate/docs/: index.md  manual.md
fluxo-typestate/docs/api/: state_machine.md
fluxo-typestate/docs/tutorials/: advanced_usage.md  getting_started.md  migration_guide.md
fluxo-typestate/src/: error.rs  lib.rs  state.rs  transition.rs
