[package]
name = "fluxo-typestate-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
fluxo-typestate = { path = "../fluxo-typestate" }
trybuild.workspace = true
