[package]
name = "fluxo-typestate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]

[dependencies]
fluxo-typestate-macros.workspace = true
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
trybuild.workspace = true
static_assertions.workspace = true

[features]
default = []
logging = ["dep:tracing"]
serde = ["dep:serde"]
